- fixed WebYaST notifier doesn't terminate the running workers after user is inactive - fixed chromium layout issues - minor layout adaptation for repositories, users and services modules

--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -107,7 +107,7 @@ input[type="text"].without_border_right {
 
 /* MODULE SPECIFIC ADAPTATIONS */
 /*  SOFTWARE REPOSITORIES */
-#repository_name, #repository_url { width:70%; }
+
 
 
 
