--- a/webclient/public/stylesheets/webyast-plugin-toolbar.css
+++ b/webclient/public/stylesheets/webyast-plugin-toolbar.css
@@ -88,6 +88,19 @@
   width:160px;
 }
 
+#webyast-toolbar-container select {
+  background-color: #FEFEFE;
+  border-color: #C4C4C4 #E0E0E0 #E0E0E0 #C4C4C4;
+  border-radius: 0 0 0 0;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 0 0 #EEEEEE inset;
+  color: #555555;
+  font-weight: normal;
+  vertical-align: middle;
+  font-size: 12px;
+}
+
 #action_link_container {
   float:right;
   clear:right;
@@ -95,7 +108,7 @@
 
 #action_link_container a:hover {
   background: -moz-linear-gradient(center bottom , #D5D5D5, #FFFFFF) repeat scroll 0 0 transparent;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EEEEEE));
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#D5D5D5));
     -moz-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;
   -webkit-box-shadow: 0px 0px 30px #a0a0a0 inset, 0px 0px 2px #333 inset;    
   color:#444;
@@ -104,7 +117,9 @@
 }
 
 #action_link_container a {
+  background: #EEE;
   background: -moz-linear-gradient(center bottom , #CCCCCC, #FFFFFF) repeat scroll 0 0 transparent;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#CCCCCC));
   border-color: #CCCCCC #EEEEEE #EEEEEE #CCCCCC;
   border-style: solid;
   border-width: 1px;
